[package]
name = "gizmo-manip"
version = "1.0.0"
edition = "2021"

[dependencies]
bevy = { version = "0.7.0", default-features = false, features = [ "render", "bevy_winit" ] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.57", default-features = false, features = [
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Window",
]}
wasm-bindgen = { version = "0.2.81" }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1