[package]
name = "gizmo-manip"
version = "1.0.0"
edition = "2021"

[dependencies]

[target.'cfg(target_os = "linux")'.dependencies]
bevy = { version = "0.11", default-features = false, features = [
  "bevy_render",
  "bevy_winit",
  "tonemapping_luts",
  "bevy_pbr",
  "ktx2",
  "zstd",
  "x11",
] }
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.11", default-features = false, features = [
  "bevy_render",
  "bevy_winit",
  "tonemapping_luts",
  "bevy_pbr",
  "ktx2",
  "zstd",
] }
web-sys = { version = "0.3.64", default-features = false, features = [
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Window",
]}
wasm-bindgen = { version = "0.2.87" }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
